public/ui/torrents.css
:host {
  display: block;
  width: 100%;
  height: 100%;
  overflow: hidden;
  outline: none;
}

.container {
  display: grid;
  color: var(--darkgray);
  grid-template-columns: 85px minmax(200px, 1fr) 80px 130px 60px 60px 47px;
  overflow: auto;
  width: 100%;
  max-height: 100%;
}

.row {
  display: contents;
}

.row.error > * {
  color: red;
}

.row.isRemoving > * {
  text-decoration: line-through;
  color: var(--gray);
}

.row.selected > * {
  background-color: var(--primary);
  color: white;
}

.row > * {
  box-sizing: border-box;
  padding: 3px 6px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: none;
}

.header {
  background-color: var(--lightgray);
  font-weight: bold;
  cursor: pointer;
  position: sticky;
  top: 0;
}

.header.sorted.reverse:after {
  content: "▼";
}

.header.sorted:after {
  content: "▲";
  font-size: 14px;
}

.name {
  overflow: hidden;
  text-overflow: ellipsis;
}

#context-menu {
  position: absolute;
  background: #efefef;
  border: 1px solid var(--gray);
  padding: 0;
  border-radius: 5px;
  box-shadow: 0 0 5px var(--gray);
  outline: none;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

#context-menu button {
  text-align: left;
  display: block;
  list-style: none;
  padding: 6px 20px;
  margin: 0;
  cursor: default;
  border: none;
}

#context-menu .divider {
  border-top: 1px solid var(--lightergray);
}

#context-menu button:hover {
  background-color: var(--lightergray);
}

.grayout {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

#delete-confirm {
  font-size: 16px;
  background-color: #efefef;
  border: 1px solid var(--gray);
  border-radius: 3px;
  padding: 20px 30px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

#delete-confirm button {
  padding: 6px;
}

.status {
  padding: 3px;
  position: relative;
  margin-bottom: 1px;
}

.layer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.layer:nth-child(1) {
  color: black;
}

.layer:nth-child(3) {
  color: white;
}

.progress .loadbar {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: var(--color);
}

.status-downloading {
  --color: blue;
}

.status-seeding {
  --color: orange;
}

.status-checking {
  --color: darkgray;
}
}

